--- a/fleet.html
+++ b/fleet.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us | Navan Hire & Hardware</title>
-  <meta name="description" content="Contact Navan Hire & Hardware on 046 902 2535. Located on the Kells Road, Navan, Co. Meath. Open Mon–Fri 7am–5pm, Sat 8:30am–1pm."/>
+  <title>Hire Fleet | Navan Hire &amp; Hardware</title>
+  <meta name="description" content="Browse our full hire fleet — telehandlers, plant and tool hire, access and spider lifts. Daily and weekly rates across Meath, Dublin and the North East."/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
@@ -24,7 +24,7 @@
       </a>
       <nav class="nav">
         <a href="index.html" class="nav-link">Home</a>
-        <a href="fleet.html" class="nav-link">Hire Fleet</a>
+        <a href="fleet.html" class="nav-link active">Hire Fleet</a>
         <a href="hardware.html" class="nav-link">Hardware &amp; DIY</a>
         <a href="telehandlers.html" class="nav-link">Telehandlers</a>
         <a href="hire.html" class="nav-link">Plant &amp; Tool Hire</a>
@@ -61,117 +61,88 @@
     </div>
   </header>
 
-  <section class="page-hero">
-    <div class="container page-hero-content">
-      <div class="breadcrumb"><a href="index.html">Home</a> / Contact</div>
-      <h1>Get in Touch</h1>
-      <p>Call us, send an enquiry or drop into our store on the Kells Road, Navan. We're always happy to help.</p>
+  <section class="pa-hero">
+    <div class="container">
+      <div class="hc-breadcrumb"><span class="hc-bc-item hc-bc-active">Hire Fleet</span></div>
+      <h1>Our Hire Fleet</h1>
+      <p>Choose a category to browse machines, see daily rates and make an enquiry.</p>
     </div>
   </section>
 
-  <div class="container">
-    <div class="contact-grid">
+  <div class="container hc-container">
+    <div class="fleet-grid">
 
-      <div class="contact-info">
-        <h2>Contact Details</h2>
-
-        <div class="contact-detail">
-          <div class="contact-detail-icon">📞</div>
-          <div>
-            <h4>Phone</h4>
-            <a href="tel:0469022535">046 902 2535</a>
+      <a href="telehandlers.html" class="fleet-card">
+        <!-- IMAGE SLOT: images/fleet/telehandlers.jpg -->
+        <div class="fleet-card-img" style="background-image:url('images/fleet/telehandlers.jpg')">
+          <div class="fleet-card-img-ph">
+            <span class="fleet-card-icon">&#128260;</span>
+            <span class="pa-img-hint">&#128247; images/fleet/telehandlers.jpg</span>
           </div>
         </div>
+        <div class="fleet-card-body">
+          <h2 class="fleet-card-title">Telehandlers</h2>
+          <p class="fleet-card-desc">360&deg; Roto, straight and buggyscopic telehandlers, plus forklifts and attachments. From 4m to 35m reach.</p>
+          <div class="fleet-card-cats">
+            <span>360&deg; Roto</span><span>Straight</span><span>Buggyscopic</span><span>Forklifts</span><span>Attachments</span>
+          </div>
+          <span class="fleet-card-cta">Browse Telehandlers &#8250;</span>
+        </div>
+      </a>
 
-        <div class="contact-detail">
-          <div class="contact-detail-icon">📧</div>
-          <div>
-            <h4>Email</h4>
-            <a href="mailto:hiredesk@nhh.ie" style="color:var(--red);font-weight:600">hiredesk@nhh.ie</a>
+      <a href="hire.html" class="fleet-card">
+        <!-- IMAGE SLOT: images/fleet/plant-tool.jpg -->
+        <div class="fleet-card-img" style="background-image:url('images/fleet/plant-tool.jpg')">
+          <div class="fleet-card-img-ph">
+            <span class="fleet-card-icon">&#128296;</span>
+            <span class="pa-img-hint">&#128247; images/fleet/plant-tool.jpg</span>
           </div>
         </div>
+        <div class="fleet-card-body">
+          <h2 class="fleet-card-title">Plant &amp; Tool Hire</h2>
+          <p class="fleet-card-desc">Diggers, dumpers, breakers, generators, compressors, flooring machines, scaffolding and much more &mdash; 300+ items available daily.</p>
+          <div class="fleet-card-cats">
+            <span>Diggers &amp; Dumpers</span><span>Breakers</span><span>Generators</span><span>Compressors</span><span>+ 12 more</span>
+          </div>
+          <span class="fleet-card-cta">Browse Plant &amp; Tool &#8250;</span>
+        </div>
+      </a>
 
-        <div class="contact-detail">
-          <div class="contact-detail-icon">📍</div>
-          <div>
-            <h4>Address</h4>
-            <p>Navan Hire & Hardware<br>Whistlemount, Kells Road<br>Navan, Co. Meath<br>C15 FX6Y</p>
+      <a href="powered-access.html" class="fleet-card">
+        <!-- IMAGE SLOT: images/fleet/access.jpg -->
+        <div class="fleet-card-img" style="background-image:url('images/fleet/access.jpg')">
+          <div class="fleet-card-img-ph">
+            <span class="fleet-card-icon">&#128679;</span>
+            <span class="pa-img-hint">&#128247; images/fleet/access.jpg</span>
           </div>
         </div>
-
-        <div class="contact-detail">
-          <div class="contact-detail-icon">🕐</div>
-          <div>
-            <h4>Opening Hours</h4>
-            <p>Monday – Friday: 7:00am – 5:00pm<br>Saturday: 8:30am – 1:00pm<br>Sunday: Closed</p>
+        <div class="fleet-card-body">
+          <h2 class="fleet-card-title">Access &amp; Spider Lifts</h2>
+          <p class="fleet-card-desc">Diesel and electric boom lifts, scissor lifts and spider lifts from 10ft to 135ft. Free site survey available.</p>
+          <div class="fleet-card-cats">
+            <span>Diesel Booms</span><span>Electric Booms</span><span>Spider Lifts</span><span>Diesel Scissors</span><span>Electric Scissors</span>
           </div>
+          <span class="fleet-card-cta">Browse Access Lifts &#8250;</span>
         </div>
-
-        <div class="contact-detail">
-          <div class="contact-detail-icon">🏋️</div>
-          <div>
-            <h4>Safety Training</h4>
-            <p>For safety training enquiries, visit<br><a href="https://www.nationaltrainingsolutions.ie" target="_blank" style="color:var(--red)">nationaltrainingsolutions.ie</a></p>
-          </div>
-        </div>
-
-        <iframe
-          class="map-embed"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2385.9!2d-6.683!3d53.654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTPCsDM5JzE0LjQiTiA2wrA0MCc1OC44Ilc!5e0!3m2!1sen!2sie!4v1234567890"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-          title="Navan Hire & Hardware location">
-        </iframe>
-      </div>
-
-      <div class="contact-form-wrap">
-        <h2>Send an Enquiry</h2>
-        <form id="contactForm" onsubmit="handleSubmit(event)">
-          <div class="form-row">
-            <div class="form-group">
-              <label for="firstName">First Name *</label>
-              <input type="text" id="firstName" name="firstName" required placeholder="John"/>
-            </div>
-            <div class="form-group">
-              <label for="lastName">Last Name *</label>
-              <input type="text" id="lastName" name="lastName" required placeholder="Murphy"/>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="email">Email Address *</label>
-            <input type="email" id="email" name="email" required placeholder="john@example.com"/>
-          </div>
-          <div class="form-group">
-            <label for="phone">Phone Number</label>
-            <input type="tel" id="phone" name="phone" placeholder="087 000 0000"/>
-          </div>
-          <div class="form-group">
-            <label for="enquiryType">Type of Enquiry</label>
-            <select id="enquiryType" name="enquiryType">
-              <option value="">Select...</option>
-              <option value="hardware">Hardware & DIY</option>
-              <option value="hire">Plant & Tool Hire</option>
-              <option value="access">Powered Access / Spider Lifts</option>
-              <option value="quote">General Quote</option>
-              <option value="other">Other</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="message">Message *</label>
-            <textarea id="message" name="message" required placeholder="Tell us what you need — equipment type, dates, location, quantity etc."></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary btn-lg" style="width:100%">Send Enquiry →</button>
-          <div id="formSuccess" style="display:none; margin-top:16px; padding:16px; background:#E8F5E9; border-radius:4px; color:#2E7D32; font-weight:600; text-align:center;">
-            ✅ Thanks! We'll be in touch shortly.
-          </div>
-        </form>
-      </div>
+      </a>
 
     </div>
   </div>
 
-    <footer class="footer">
+  <section class="cta-band" style="margin-top:40px">
+    <div class="container cta-inner">
+      <div>
+        <h2>Not Sure What You Need?</h2>
+        <p>Call us and we'll recommend the right machine for your job.</p>
+      </div>
+      <div class="cta-actions">
+        <a href="tel:0469022535" class="btn btn-white btn-lg">&#128222; 046 902 2535</a>
+        <a href="contact.html" class="btn btn-outline-white btn-lg">Send Enquiry</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
     <div class="container footer-grid">
       <div class="footer-col">
         <img src="logo-footer.svg" alt="Navan Hire &amp; Hardware" class="footer-logo-img"/>
