--- a/index.html
+++ b/index.html
@@ -1,92 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Navan Hire & Hardware | Meath's One-Stop Hire & Hardware Shop</title>
-  <meta name="description" content="Navan Hire & Hardware – Meath's leading provider of hardware, plant hire, powered access and building supplies since 1986. Located on the Kells Road, Navan."/>
+  <meta name="description" content="Navan Hire & Hardware – Meath's leading provider of hardware, plant hire, powered access and building supplies since 1986."/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700;800&family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-
-  <!-- TOP BAR -->
   <div class="topbar">
     <div class="container topbar-inner">
-      <span>📞 <a href="tel:0469022535">046 902 2535</a></span>
-      <span>🕐 Mon–Fri: 7am–5pm &nbsp;|&nbsp; Sat: 8:30am–1pm</span>
-      <span>📍 Kells Road, Navan, Co. Meath</span>
+      <span>&#128222; <a href="tel:0469022535">046 902 2535</a></span>
+      <span>&#128336; Mon&ndash;Fri: 7am&ndash;5pm &nbsp;|&nbsp; Sat: 8:30am&ndash;1pm</span>
+      <span>&#128205; Kells Road, Navan, Co. Meath</span>
     </div>
   </div>
-
-  <!-- HEADER -->
   <header class="header">
     <div class="container header-inner">
       <a href="index.html" class="logo">
-        <span class="logo-main">NHH</span>
-        <span class="logo-sub">Navan Hire & Hardware</span>
+        <img src="logo.svg" alt="Navan Hire &amp; Hardware" class="logo-img"/>
       </a>
-      <nav class="nav">
+            <nav class="nav">
         <a href="index.html" class="nav-link active">Home</a>
-        <a href="hardware.html" class="nav-link">Hardware & DIY</a>
-        <a href="hire.html" class="nav-link">Plant & Tool Hire</a>
-        <a href="powered-access.html" class="nav-link">Powered Access</a>
-        <a href="contact.html" class="nav-link">Contact</a>
-        <a href="careers.html" class="nav-link">Careers</a>
+        <a href="hardware.html" class="nav-link">Hardware &amp; DIY</a>
+        <a href="telehandlers.html" class="nav-link">Telehandlers</a>
+        <a href="hire.html" class="nav-link">Plant &amp; Tool Hire</a>
+        <a href="powered-access.html" class="nav-link">Access &amp; Spider Lifts</a>
       </nav>
-      <a href="contact.html" class="btn btn-primary">Get a Quote</a>
+      <div class="nhh-search-wrap">
+        <input type="search" id="nhhSearch" class="nhh-search-input" placeholder="Search equipment..." autocomplete="off" spellcheck="false"/>
+        <span class="nhh-search-icon">&#128269;</span>
+        <div class="nhh-search-results" id="nhhSearchResults"></div>
+      </div>
+      <a href="contact.html" class="btn btn-white header-cta">Get a Quote</a>
+      <a href="account.html" class="nhh-account-btn" title="Trade Login / Apply" aria-label="Account">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="12" cy="8" r="4"/>
+          <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/>
+        </svg>
+      </a>
       <button class="hamburger" id="hamburger" aria-label="Open menu">&#9776;</button>
     </div>
-    <!-- Mobile Nav -->
-    <div class="mobile-nav" id="mobileNav">
+        <div class="mobile-nav" id="mobileNav">
       <a href="index.html">Home</a>
       <a href="hardware.html">Hardware & DIY</a>
+      <a href="telehandlers.html">Telehandlers</a>
       <a href="hire.html">Plant & Tool Hire</a>
-      <a href="powered-access.html">Powered Access</a>
-      <a href="contact.html">Contact</a>
-      <a href="careers.html">Careers</a>
+      <a href="powered-access.html">Access & Spider Lifts</a>
+      <a href="contact.html">Get a Quote</a>
+      <div class="mobile-search-wrap">
+        <input type="search" id="nhhSearchMob" class="nhh-search-input" placeholder="Search all equipment..." autocomplete="off" spellcheck="false"/>
+        <div class="nhh-search-results" id="nhhSearchResultsMob"></div>
+      </div>
     </div>
   </header>
 
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-bg"></div>
-    <div class="container hero-content">
-      <div class="hero-badge">Est. 1986 · 100% Irish Owned</div>
-      <h1 class="hero-title">Meath's One-Stop<br><span class="accent">Hire & Hardware</span><br>Shop</h1>
-      <p class="hero-desc">Hardware, building supplies, plant hire, powered access and more — all from one trusted family business on the Kells Road, Navan.</p>
-      <div class="hero-actions">
-        <a href="hire.html" class="btn btn-primary btn-lg">Browse Plant Hire</a>
-        <a href="hardware.html" class="btn btn-outline btn-lg">Shop Hardware</a>
+  <!-- SPLIT HERO -->
+  <section class="split-hero">
+    <div class="split-hero-panel split-hero-panel--hire">
+      <div class="split-hero-content">
+        <div class="split-badge">Est. 1986</div>
+        <h1 class="split-hero-title">Plant &<br>Tool Hire</h1>
+        <p class="split-hero-desc">Diggers, dumpers, scissor lifts, boom lifts, spider lifts, generators and more. Delivering across Dublin and the North East daily.</p>
+        <div class="split-hero-actions">
+          <a href="tel:0469022535" class="btn btn-white btn-lg">📞 Call Now</a>
+          <a href="fleet.html" class="btn btn-outline-white btn-lg">View Hire Fleet</a>
+        </div>
       </div>
     </div>
-    <div class="hero-scroll-hint">↓</div>
+    <div class="split-hero-panel split-hero-panel--materials">
+      <div class="split-hero-content">
+        <div class="split-badge split-badge--red">100% Irish Owned</div>
+        <h1 class="split-hero-title split-hero-title--dark">Building<br>Materials</h1>
+        <p class="split-hero-desc split-hero-desc--dark">Thousands of products in stock — timber, insulation, plumbing, paints, tools, PPE and much more. Trade and retail welcome.</p>
+        <div class="split-hero-actions">
+          <a href="contact.html" class="btn btn-primary btn-lg">Enquire Now</a>
+          <a href="hardware.html" class="btn btn-outline btn-lg">Browse Products</a>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- TRUST STRIP -->
   <section class="trust-strip">
     <div class="container trust-grid">
+
       <div class="trust-item">
-        <span class="trust-icon">🚚</span>
+        <svg class="trust-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="1" y="3" width="15" height="13" rx="1"/><path d="M16 8h4l3 5v4h-7V8z"/><circle cx="5.5" cy="18.5" r="2.5"/><circle cx="18.5" cy="18.5" r="2.5"/>
+        </svg>
         <span>Nationwide Delivery</span>
       </div>
+
       <div class="trust-item">
-        <span class="trust-icon">👷</span>
+        <svg class="trust-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M12 2a5 5 0 0 1 5 5v1H7V7a5 5 0 0 1 5-5z"/><rect x="3" y="8" width="18" height="3" rx="1"/><path d="M8 11v9m8-9v9"/><path d="M5 20h14"/>
+        </svg>
         <span>Highly Qualified Staff</span>
       </div>
+
       <div class="trust-item">
-        <span class="trust-icon">🇮🇪</span>
+        <svg class="trust-icon" viewBox="0 0 24 24" fill="currentColor" stroke="none">
+          <!-- Shamrock: three lobes + stem -->
+          <circle cx="12" cy="8.5" r="3.5"/>
+          <circle cx="8"  cy="12" r="3.5"/>
+          <circle cx="16" cy="12" r="3.5"/>
+          <rect   x="11" y="14" width="2" height="5" rx="1"/>
+        </svg>
         <span>100% Irish Owned</span>
       </div>
+
       <div class="trust-item">
-        <span class="trust-icon">📋</span>
+        <svg class="trust-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M9 5H7a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-2"/><rect x="9" y="3" width="6" height="4" rx="1"/><path d="M9 12h6m-6 4h4"/>
+        </svg>
         <span>FREE Site Surveys</span>
       </div>
+
       <div class="trust-item">
-        <span class="trust-icon">⚡</span>
+        <svg class="trust-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/>
+        </svg>
         <span>Prompt Collection</span>
       </div>
+
     </div>
   </section>
 
@@ -98,35 +137,52 @@
         <p>Everything you need for your build, project or garden — under one roof.</p>
       </div>
       <div class="services-grid">
-        <a href="hardware.html" class="service-card service-card--hardware">
-          <div class="service-icon">🔩</div>
-          <h3>Hardware & DIY</h3>
-          <p>Building supplies, timber, insulation, plumbing, paints, tools and more from trusted brands.</p>
-          <span class="service-link">Shop Now →</span>
+
+        <a href="telehandlers.html" class="service-card service-card--teleporter" style="background-image:url('images/wwd/teleporter.jpg')">
+          <div class="sc-overlay"></div>
+          <div class="sc-content">
+            <div class="sc-tag">Hire</div>
+            <h3>Teleporter Hire</h3>
+            <p>Roto, straight-mast and buggy-scopic telehandlers — the right machine for every site.</p>
+            <span class="service-link">View Teleporters →</span>
+          </div>
         </a>
-        <a href="hire.html" class="service-card service-card--hire">
-          <div class="service-icon">🚜</div>
-          <h3>Plant & Tool Hire</h3>
-          <p>Diggers, dumpers, breakers, compressors, generators, trailers and much more — daily or weekly hire.</p>
-          <span class="service-link">View Hire Fleet →</span>
+
+        <a href="hire.html" class="service-card service-card--plant" style="background-image:url('images/wwd/plant-hire.jpg')">
+          <div class="sc-overlay"></div>
+          <div class="sc-content">
+            <div class="sc-tag">Hire</div>
+            <h3>Plant &amp; Tool Hire</h3>
+            <p>Diggers, dumpers, breakers, compressors, generators and much more — daily or weekly.</p>
+            <span class="service-link">Search Plant &amp; Tools →</span>
+          </div>
         </a>
-        <a href="powered-access.html" class="service-card service-card--access">
-          <div class="service-icon">🏗️</div>
-          <h3>Powered Access</h3>
-          <p>Scissor lifts, boom lifts, spider lifts and telehandlers — delivered across Dublin and the North East.</p>
-          <span class="service-link">Get a Quote →</span>
+
+        <a href="powered-access.html" class="service-card service-card--access" style="background-image:url('images/wwd/access-hire.jpg')">
+          <div class="sc-overlay"></div>
+          <div class="sc-content">
+            <div class="sc-tag">Hire</div>
+            <h3>Access Hire</h3>
+            <p>Scissor lifts, boom lifts and spider lifts — delivered across Dublin and the North East.</p>
+            <span class="service-link">Browse Access Machines →</span>
+          </div>
         </a>
-        <a href="hardware.html#garden" class="service-card service-card--garden">
-          <div class="service-icon">🌿</div>
-          <h3>Garden Centre</h3>
-          <p>Stihl lawnmowers, chainsaws, hedge trimmers, garden tools, fencing, artificial grass and more.</p>
-          <span class="service-link">Browse Garden →</span>
+
+        <a href="hardware.html" class="service-card service-card--materials" style="background-image:url('images/wwd/building-materials.jpg')">
+          <div class="sc-overlay"></div>
+          <div class="sc-content">
+            <div class="sc-tag">Shop</div>
+            <h3>Building Materials</h3>
+            <p>Timber, insulation, plumbing, paints, floors and hardware — all under one roof.</p>
+            <span class="service-link">Shop Now →</span>
+          </div>
         </a>
+
       </div>
     </div>
   </section>
 
-  <!-- ABOUT STRIP -->
+  <!-- ABOUT -->
   <section class="about-strip section">
     <div class="container about-inner">
       <div class="about-text">
@@ -137,22 +193,10 @@
         <a href="contact.html" class="btn btn-primary">Talk to Our Team</a>
       </div>
       <div class="about-stats">
-        <div class="stat">
-          <div class="stat-number">38+</div>
-          <div class="stat-label">Years in Business</div>
-        </div>
-        <div class="stat">
-          <div class="stat-number">1000s</div>
-          <div class="stat-label">Products in Stock</div>
-        </div>
-        <div class="stat">
-          <div class="stat-number">Daily</div>
-          <div class="stat-label">Dublin Deliveries</div>
-        </div>
-        <div class="stat">
-          <div class="stat-number">5★</div>
-          <div class="stat-label">Customer Service</div>
-        </div>
+        <div class="stat"><div class="stat-number">38+</div><div class="stat-label">Years in Business</div></div>
+        <div class="stat"><div class="stat-number">1000s</div><div class="stat-label">Products in Stock</div></div>
+        <div class="stat"><div class="stat-number">Daily</div><div class="stat-label">Dublin Deliveries</div></div>
+        <div class="stat"><div class="stat-number">5★</div><div class="stat-label">Customer Service</div></div>
       </div>
     </div>
   </section>
@@ -193,7 +237,7 @@
     </div>
   </section>
 
-  <!-- CTA BAND -->
+  <!-- CTA -->
   <section class="cta-band">
     <div class="container cta-inner">
       <div>
@@ -208,47 +252,54 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="footer">
+    <footer class="footer">
     <div class="container footer-grid">
       <div class="footer-col">
-        <div class="footer-logo">NHH</div>
-        <p>Navan Hire & Hardware<br>Whistlemount, Kells Road<br>Navan, Co. Meath, C15 FX6Y</p>
-        <p><a href="tel:0469022535">046 902 2535</a></p>
+        <img src="logo-footer.svg" alt="Navan Hire &amp; Hardware" class="footer-logo-img"/>
+        <p style="margin-top:14px;color:rgba(255,255,255,0.7)">Whistlemount, Kells Road<br>Navan, Co. Meath, C15 FX6Y</p>
+        <p><a href="tel:0469022535" style="color:#fff">046 902 2535</a></p>
+        <p><a href="mailto:hiredesk@nhh.ie" style="color:rgba(255,255,255,0.7)">hiredesk@nhh.ie</a></p>
       </div>
       <div class="footer-col">
-        <h4>Services</h4>
+        <h4>Hire</h4>
         <ul>
-          <li><a href="hardware.html">Hardware & DIY</a></li>
-          <li><a href="hire.html">Plant & Tool Hire</a></li>
-          <li><a href="powered-access.html">Powered Access</a></li>
-          <li><a href="powered-access.html">Spider Lifts</a></li>
+          <li><a href="fleet.html">Hire Fleet</a></li>
+          <li><a href="hire.html">Plant &amp; Tool Hire</a></li>
+          <li><a href="powered-access.html">Access &amp; Spider Lifts</a></li>
+          <li><a href="telehandlers.html">Telehandlers</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h4>Company</h4>
         <ul>
+          <li><a href="hardware.html">Hardware &amp; DIY</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="careers.html">Careers</a></li>
-          <li><a href="https://www.nationaltrainingsolutions.ie" target="_blank">Safety Training</a></li>
+          <li><a href="account.html">Trade Account</a></li>
         </ul>
       </div>
       <div class="footer-col">
         <h4>Opening Hours</h4>
-        <p>Mon–Fri: 7:00am – 5:00pm</p>
-        <p>Saturday: 8:30am – 1:00pm</p>
-        <p>Sunday: Closed</p>
+        <p style="color:rgba(255,255,255,0.7)">Mon&ndash;Fri: 7:00am &ndash; 5:00pm<br>Saturday: 8:30am &ndash; 1:00pm<br>Sunday: Closed</p>
         <div class="social-links">
-          <a href="https://www.facebook.com/NavanHireHardware" target="_blank">Facebook</a>
+          <a href="https://www.facebook.com/NavanHireHardware" target="_blank" rel="noopener" aria-label="Facebook">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>
+          </a>
+          <a href="https://www.instagram.com/navanhirehardware" target="_blank" rel="noopener" aria-label="Instagram">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><circle cx="12" cy="12" r="4"/><circle cx="17.5" cy="6.5" r="1" fill="currentColor" stroke="none"/></svg>
+          </a>
+          <a href="https://www.linkedin.com/company/navan-hire-hardware" target="_blank" rel="noopener" aria-label="LinkedIn">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
+          </a>
         </div>
       </div>
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <p>© 2026 Navan Hire & Hardware. All rights reserved. | 100% Irish Owned</p>
+        <p>&copy; 2026 Navan Hire &amp; Hardware. All rights reserved. | 100% Irish Owned</p>
       </div>
     </div>
   </footer>
-
+  <script src="search.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
