--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,10 @@
       </a>
       <nav class="nav">
         <a href="index.html" class="nav-link">Home</a>
-        <a href="fleet.html" class="nav-link">Hire Fleet</a>
         <a href="hardware.html" class="nav-link">Hardware &amp; DIY</a>
         <a href="telehandlers.html" class="nav-link">Telehandlers</a>
         <a href="hire.html" class="nav-link">Plant &amp; Tool Hire</a>
         <a href="powered-access.html" class="nav-link">Access &amp; Spider Lifts</a>
-              <a href="account.html" class="nav-link">My Account</a>
       </nav>
       <div class="nhh-search-wrap">
         <input type="search" id="nhhSearch" class="nhh-search-input" placeholder="Search equipment..." autocomplete="off" spellcheck="false"/>
@@ -47,13 +45,11 @@
     </div>
     <div class="mobile-nav" id="mobileNav">
       <a href="index.html">Home</a>
-      <a href="fleet.html">Hire Fleet</a>
       <a href="hardware.html">Hardware & DIY</a>
       <a href="telehandlers.html">Telehandlers</a>
       <a href="hire.html">Plant & Tool Hire</a>
       <a href="powered-access.html">Access & Spider Lifts</a>
       <a href="contact.html">Get a Quote</a>
-      <a href="account.html">My Account</a>
       <div class="mobile-search-wrap">
         <input type="search" id="nhhSearchMob" class="nhh-search-input" placeholder="Search all equipment..." autocomplete="off" spellcheck="false"/>
         <div class="nhh-search-results" id="nhhSearchResultsMob"></div>
@@ -127,7 +123,9 @@
 
       <div class="contact-form-wrap">
         <h2>Send an Enquiry</h2>
-        <form id="contactForm" onsubmit="handleSubmit(event)">
+        <!-- FormSpree form - replace YOUR_FORM_ID with your actual FormSpree ID -->
+        <!-- Get one free at https://formspree.io -->
+        <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
           <div class="form-row">
             <div class="form-group">
               <label for="firstName">First Name *</label>
@@ -140,7 +138,7 @@
           </div>
           <div class="form-group">
             <label for="email">Email Address *</label>
-            <input type="email" id="email" name="email" required placeholder="john@example.com"/>
+            <input type="email" id="email" name="_replyto" required placeholder="john@example.com"/>
           </div>
           <div class="form-group">
             <label for="phone">Phone Number</label>
@@ -161,10 +159,12 @@
             <label for="message">Message *</label>
             <textarea id="message" name="message" required placeholder="Tell us what you need — equipment type, dates, location, quantity etc."></textarea>
           </div>
+          <!-- Honeypot field to prevent spam -->
+          <input type="text" name="_gotcha" style="display:none">
           <button type="submit" class="btn btn-primary btn-lg" style="width:100%">Send Enquiry →</button>
-          <div id="formSuccess" style="display:none; margin-top:16px; padding:16px; background:#E8F5E9; border-radius:4px; color:#2E7D32; font-weight:600; text-align:center;">
-            ✅ Thanks! We'll be in touch shortly.
-          </div>
+          <p style="margin-top:12px; font-size:0.85rem; color:#666;">
+            <strong>Note:</strong> To activate this form, sign up free at <a href="https://formspree.io" target="_blank" style="color:var(--red)">formspree.io</a> and replace YOUR_FORM_ID in contact.html with your form ID.
+          </p>
         </form>
       </div>
 
