Activated FormSpree contact form with form ID

--- a/contact.html
+++ b/contact.html
@@ -123,9 +123,7 @@
 
       <div class="contact-form-wrap">
         <h2>Send an Enquiry</h2>
-        <!-- FormSpree form - replace YOUR_FORM_ID with your actual FormSpree ID -->
-        <!-- Get one free at https://formspree.io -->
-        <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+        <form id="contactForm" action="https://formspree.io/f/mkovvdww" method="POST">
           <div class="form-row">
             <div class="form-group">
               <label for="firstName">First Name *</label>
@@ -162,9 +160,6 @@
           <!-- Honeypot field to prevent spam -->
           <input type="text" name="_gotcha" style="display:none">
           <button type="submit" class="btn btn-primary btn-lg" style="width:100%">Send Enquiry →</button>
-          <p style="margin-top:12px; font-size:0.85rem; color:#666;">
-            <strong>Note:</strong> To activate this form, sign up free at <a href="https://formspree.io" target="_blank" style="color:var(--red)">formspree.io</a> and replace YOUR_FORM_ID in contact.html with your form ID.
-          </p>
         </form>
       </div>
 
